<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/list_item_background">


    <LinearLayout
        android:id="@+id/rootview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rl_user_unlogin"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/my_info_bg"
            android:orientation="vertical">

            <com.nick.smarthome.widgets.CircleImageView
                android:id="@+id/iv_user_img"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/space_20"
                android:contentDescription="@null"
                android:src="@mipmap/widget_dface"
                app:border_color="@color/white"
                app:border_width="3dip" />

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_user_img"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/space_5"
                android:text="@string/my_information_unlogin_tips"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_18" />
        </RelativeLayout>

        <com.nick.smarthome.widgets.CustomerScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/rl_key"
                    style="@style/option_item_rl">

                    <ImageView
                        android:id="@+id/key_img"
                        style="@style/option_item_img"
                        android:background="@mipmap/icon_my_key"
                        android:contentDescription="@null" />

                    <TextView
                        style="@style/option_item_text"
                        android:layout_toRightOf="@+id/key_img"
                        android:text="@string/my_key" />

                    <ImageView
                        style="@style/option_item_img_right"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/icon_arrow_right_gray"
                        android:contentDescription="@null" />

                </RelativeLayout>

                <View style="@style/h_line" />

                <RelativeLayout
                    android:id="@+id/rl_house"
                    style="@style/option_item_rl">

                    <ImageView
                        android:id="@+id/house_img"
                        style="@style/option_item_img"
                        android:background="@mipmap/icon_my_house"
                        android:contentDescription="@null" />

                    <TextView
                        style="@style/option_item_text"
                        android:layout_toRightOf="@+id/house_img"
                        android:text="@string/my_house_resource" />

                    <ImageView
                        style="@style/option_item_img_right"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/icon_arrow_right_gray"
                        android:contentDescription="@null" />
                </RelativeLayout>

                <View style="@style/h_line" />

                <RelativeLayout
                    android:id="@+id/rl_lock"
                    style="@style/option_item_rl">

                    <ImageView
                        android:id="@+id/lock_img"
                        style="@style/option_item_img"
                        android:background="@mipmap/icon_my_lock"
                        android:contentDescription="@null" />

                    <TextView
                        style="@style/option_item_text"
                        android:layout_toRightOf="@+id/lock_img"
                        android:text="@string/my_lock" />

                    <ImageView
                        style="@style/option_item_img_right"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/icon_arrow_right_gray"
                        android:contentDescription="@null" />
                </RelativeLayout>

                <View style="@style/h_line" />

                <RelativeLayout
                    android:id="@+id/rl_trade"
                    style="@style/option_item_rl">

                    <ImageView
                        android:id="@+id/trade_img"
                        style="@style/option_item_img"
                        android:background="@mipmap/icon_trade_info"
                        android:contentDescription="@null" />

                    <TextView
                        style="@style/option_item_text"
                        android:layout_toRightOf="@+id/trade_img"
                        android:text="@string/trade_information" />

                    <ImageView
                        style="@style/option_item_img_right"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/icon_arrow_right_gray"
                        android:contentDescription="@null" />
                </RelativeLayout>

                <View style="@style/h_line" />

                <RelativeLayout
                    android:id="@+id/rl_setting"
                    style="@style/option_item_rl">

                    <ImageView
                        android:id="@+id/setting_img"
                        style="@style/option_item_img"
                        android:background="@mipmap/icon_my_setting"
                        android:contentDescription="@null" />

                    <TextView
                        style="@style/option_item_text"
                        android:layout_toRightOf="@+id/setting_img"
                        android:text="@string/my_setting" />

                    <ImageView
                        style="@style/option_item_img_right"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/icon_arrow_right_gray"
                        android:contentDescription="@null" />
                </RelativeLayout>

                <View style="@style/h_line" />
            </LinearLayout>
        </com.nick.smarthome.widgets.CustomerScrollView>

    </LinearLayout>


</FrameLayout>